Specifying which files go to publishing.

--- a/package.json
+++ b/package.json
@@ -20,5 +20,12 @@
     "peerDependencies": {
         "react-native": ">=0.50"
     },
-    "dependencies": {}
+    "dependencies": {},
+    "files": [
+        "android/",
+        "ios/",
+        "index.js",
+        "index.d.ts",
+        "react-native.config.js"
+      ]
 }
