--- a/example/package.json
+++ b/example/package.json
@@ -5,27 +5,12 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "start": "react-native start",
-    "test": "jest",
-    "lint": "eslint ."
+    "start": "react-native start"
   },
   "dependencies": {
-    "react": "16.13.1",
-    "react-native": "0.62.0",
+    "react": "16.11.0",
+    "react-native": "0.62.1",
     "react-native-ble-advertiser": "file:../react-native-ble-advertiser-0.0.10.tgz",
     "react-native-uuid-generator": "^6.1.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/runtime": "^7.6.2",
-    "@react-native-community/eslint-config": "^1.0.0",
-    "babel-jest": "^25.2.6",
-    "eslint": "^6.5.1",
-    "jest": "^25.2.6",
-    "metro-react-native-babel-preset": "^0.56.0",
-    "react-test-renderer": "16.13.1"
-  },
-  "jest": {
-    "preset": "react-native"
   }
 }
