--- a/example/ios/BLEAdvertiserExample/Info.plist
+++ b/example/ios/BLEAdvertiserExample/Info.plist
@@ -38,14 +38,16 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
-	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+	<string>We log your location to allow comparisons with other user's locations in a privacy-preserving way.</string>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>We broadcast and scan for bluetooth signals in a way to track all phones nearby you in a privacy-preserving way.</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>bluetooth-central</string>
 		<string>bluetooth-peripheral</string>
 	</array>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
