Automating repacking script and github tagging after publish.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "A react-native implementation for sending BLE advertisements",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "postpublish" : "PACKAGE_VERSION=$(cat package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[\",]//g' | tr -d '[[:space:]]') && git tag $PACKAGE_VERSION && git push --tags"
     },
     "keywords": [
         "react",
