--- a/example/package.json
+++ b/example/package.json
@@ -9,9 +9,22 @@
   },
   "dependencies": {
     "immutability-helper": "^3.0.2",
-    "react": "16.11.0",
-    "react-native": "0.62.1",
+    "react": "16.13.1",
+    "react-native": "0.63.2",
     "react-native-ble-advertiser": "file:../react-native-ble-advertiser-0.0.16.tgz",
     "react-native-uuid-generator": "^6.1.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/runtime": "^7.8.4",
+    "@react-native-community/eslint-config": "^1.1.0",
+    "babel-jest": "^25.1.0",
+    "eslint": "^6.5.1",
+    "jest": "^25.1.0",
+    "metro-react-native-babel-preset": "^0.59.0",
+    "react-test-renderer": "16.13.1"
+  },
+  "jest": {
+    "preset": "react-native"
   }
 }
