--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -2,10 +2,11 @@
 
 buildscript {
     ext {
-        buildToolsVersion = "29.0.2"
+        buildToolsVersion = "31.0.0"
         minSdkVersion = 21
-        compileSdkVersion = 29
-        targetSdkVersion = 29
+        compileSdkVersion = 31
+        targetSdkVersion = 28
+        androidXCore = "1.6.0"
     }
     repositories {
         google()
