--- a/example/package.json
+++ b/example/package.json
@@ -13,7 +13,7 @@
     "immutability-helper": "^3.1.1",
     "react": "18.0.0",
     "react-native": "0.69.0",
-    "react-native-ble-advertiser": "../react-native-ble-advertiser-0.0.16.tgz",
+    "react-native-ble-advertiser": "file:../react-native-ble-advertiser-0.0.16.tgz",
     "react-native-uuid-generator": "^6.1.1"
   },
   "devDependencies": {
