--- a/example/package.json
+++ b/example/package.json
@@ -29,5 +29,9 @@
   },
   "jest": {
     "preset": "react-native"
-  }
+  },
+  "reactNativePermissionsIOS": [
+    "BluetoothPeripheral",
+    "LocationWhenInUse"
+  ]
 }
